--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,24 @@
-.App {
+.spooky-header-txt {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+}
+
+.spooky-slam-header {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  max-width: 413px;
+  margin: auto;
+  padding: 10px;
+  vertical-align: center;
+}
+
+.vote-title {
+  position: relative;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+input[type="file"] {
+  display: none;
 }
